--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <header>
         <img src="kobak_sm_round.jpg" alt="dmitry kobak photo" width=150 height=150 
-            style="margin-left:25px;margin-right:50px; float:left;">
+            style="margin:0 50px 10px 25px; float:left;">
             
         <p><a href="mailto:dmitry.kobak@uni-tuebingen.de">dmitry.kobak@uni-tuebingen.de</a>
         
