--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         <p>In 2000&ndash;2007 I studied computer science (BSc) and theoretical physics (MSc) in St. Petersburg University.
         
         <p>Before that, I attended St. Petersburg Classical Gymnasium #610. I was part-time teaching there computer science and physics in 2002&ndash;2006 while studying in university. In 2004, I made a website <a href="http://610.ru">610.ru</a> that is <i>still</i> online (with minor changes). 
+        
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: Aug 5, 2020
   </body>
 </html>
 
