--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         
         <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: Aug 5, 2020
         
-        <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin-top:2em"></div> 
+        <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </div>
     </body>
 </html>
