--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <p>
         <img src="orcid_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="http://orcid.org/0000-0002-5639-7209" style="margin-right:1em">ORCID</a> 
         <img src="github_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://github.com/dkobak/" style="margin-right:1em">Github</a>
-        <a href="https://pubmed.ncbi.nlm.nih.gov/?term=dmitry+kobak%5BAuthor%5D&sort=date" style="margin-right:1em">Pubmed</a>
-        <a href="https://dblp.uni-trier.de/pers/hd/k/Kobak:Dmitry?q=dmitry%20kobak" style="margin-right:1em">Dblp</a>
-        <a href="https://publons.com/researcher/3089678/dmitry-kobak/">Publons</a>
+        <img src="pubmed_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://pubmed.ncbi.nlm.nih.gov/?term=dmitry+kobak%5BAuthor%5D&sort=date" style="margin-right:1em">Pubmed</a>
+        <img src="dblp_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://dblp.uni-trier.de/pers/hd/k/Kobak:Dmitry?q=dmitry%20kobak" style="margin-right:1em">Dblp</a>
+        <img src="publons_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://publons.com/researcher/3089678/dmitry-kobak/">Publons</a>
         
         <p>
         <img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-right:5px;margin-bottom:-.2em"><a href="https://twitter.com/hippopedoid">@hippopedoid on Twitter</a><br>
