--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <li><a href="https://elifesciences.org/articles/10989">Demixed principal component analysis of neural population data</a> (<em>eLife</em>,&nbsp;2016)
         </ul>
         
-        <p>In 2007&ndash;2012 I did my PhD in the <a href="https://www.neuro.uni-freiburg.de/">Mehring lab</a>, initially at Freiburg University and later at Imperial College London, working on computational motor control.
+        <p>In 2007&ndash;2012 I did my PhD in the <a href="https://www.brain.uni-freiburg.de/">Mehring lab</a>, initially at Freiburg University and later at Imperial College London, working on computational motor control.
         <ul>
         <li><a href="https://www.biorxiv.org/content/10.1101/505198v1.full">Motor skill learning leads to the increase of planning horizon</a> (<em>bioRxiv</em>,&nbsp;2018)
         <li><a href="http://www.jneurosci.org/content/32/29/9898.short">Adaptation paths to novel motor tasks are shaped by prior structure learning</a> (<em>The&nbsp;Journal&nbsp;of&nbsp;Neuroscience</em>,&nbsp;2012)
