--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         <p style="clear:both">I am a research scientist in the <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University. I am interested in unsupervised learning, in particular manifold learning and dimensionality reduction for 2D visualization of biological datasets. At the moment I am mostly working with single-cell RNA-seq data coming from the brain.  
 
-        <p>Some of my papers, grouped by topics, are listed below. I am only listing [co-]first/last author papers; see Google Scholar page linked above for a complete list. All papers are open access.
+        <p>Some of my papers, grouped by topics, are listed below. I am only listing [co-]first/last author papers; see Google Scholar page linked above for a complete list. Almost all papers are open access.
 
         <h2>t-SNE and all that</h2>
         <ul>
@@ -71,6 +71,7 @@
         
         <h2>+ Election forensics</h2>
         <ul>
+        <li><a href="https://rss.onlinelibrary.wiley.com/doi/full/10.1111/1740-9713.01438">Suspect peaks in Russia's “referendum” results</a> (<em>Significance</em>,&nbsp;2020)
         <li><a href="https://rss.onlinelibrary.wiley.com/doi/full/10.1111/j.1740-9713.2018.01141.x">Putin's peaks: Russian election data revisited</a> (<em>Significance</em>,&nbsp;2018)
         <li><a href="https://rss.onlinelibrary.wiley.com/doi/full/10.1111/j.1740-9713.2016.00936.x">Statistical fingerprints of electoral fraud?</a> (<em>Significance</em>,&nbsp;2016)
         <li><a href="https://projecteuclid.org/euclid.aoas/1458909907">Integer percentages as electoral falsification fingerprints</a> (<em>The&nbsp;Annals&nbsp;of&nbsp;Applied&nbsp;Statistics</em>,&nbsp;2016)
