--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
         </header>
         
         <p style="clear:both">I am a research scientist in the <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University. I am interested in unsupervised learning, in particular manifold learning and dimensionality reduction for 2D visualization of biological datasets. At the moment I am mostly working with single-cell RNA-seq data coming from the brain.  
+            
+        <hr>
+        <p>In the winter semester 2020/21 I am teaching an introductory course on machine learning (Machine Learning I) for MSc students in neuroscience. The videos will appear in this Youtube playlist:
+        <ul>
+        <li><a href="https://www.youtube.com/playlist?list=PL05umP7R6ij35ShKLDqccJSDntugY4FQT">Tübingen Machine Learning / Introduction to Machine Learning</a>
+        </ul>
 
+        <hr>
         <p>Some of my papers, grouped by topics, are listed below. I am only listing [co-]first/last author papers; see Google Scholar page linked above for a complete list. Almost all papers are open access.
 
         <h2>t-SNE and all that</h2>
