--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         
         <h2>+ Election forensics</h2>
         <ul>
-        <li><a href="https://rss.onlinelibrary.wiley.com/doi/full/10.1111/1740-9713.01438">Suspect peaks in Russia's “referendum” results</a> (<em>Significance</em>,&nbsp;2020)
+        <li><a href="https://rss.onlinelibrary.wiley.com/doi/full/10.1111/1740-9713.01438">Suspect peaks in Russia's “referendum” results</a> (<em>Significance</em>,&nbsp;2020) <a href="pdfs/kobak2020suspect.pdf">pdf</a>
         <li><a href="https://rss.onlinelibrary.wiley.com/doi/full/10.1111/j.1740-9713.2018.01141.x">Putin's peaks: Russian election data revisited</a> (<em>Significance</em>,&nbsp;2018)
         <li><a href="https://rss.onlinelibrary.wiley.com/doi/full/10.1111/j.1740-9713.2016.00936.x">Statistical fingerprints of electoral fraud?</a> (<em>Significance</em>,&nbsp;2016)
         <li><a href="https://projecteuclid.org/euclid.aoas/1458909907">Integer percentages as electoral falsification fingerprints</a> (<em>The&nbsp;Annals&nbsp;of&nbsp;Applied&nbsp;Statistics</em>,&nbsp;2016)
