--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </ul>
 
         <hr>
-        <p>Some of my papers, grouped by topics, are listed below. I am only listing [co-]first/last author papers; see Google Scholar page linked above for a complete list. Almost all papers are open access.
+        <p>My recent papers, grouped by topics, are listed below. I am only listing [co-]first/last author papers; see Google Scholar page linked above for a complete list. Most papers are open access; others are provided here.
 
         <h2>t-SNE and all that</h2>
         <ul>
