--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         </ul>
 
         <hr>
-        <p>My recent papers, grouped by topics, are listed below. I am only listing [co-]first/last author papers here; see Google Scholar page linked above for a complete list. <strike>All</strike> Almost all papers are open access.
+        <p>My recent papers, grouped by topics, are listed below. I am only listing [co-]first/last author papers here; see Google Scholar page linked above for a complete list. Most papers are open access; for the ones that are not I provide PDFs.
 
         <h2>t-SNE and all that</h2>
         <ul>
         <li><a href="https://arxiv.org/abs/2007.08902">A unifying perspective on neighbor embeddings along the attraction-repulsion spectrum</a> (<em>arXiv</em>,&nbsp;2020)
-        <li><a href="https://www.biorxiv.org/content/10.1101/2019.12.19.877522v1">UMAP does not preserve global structure any better than t-SNE when using the same initialization</a> (<em>bioRxiv</em>,&nbsp;2020)
+        <li><a href="https://www.nature.com/articles/s41587-020-00809-z">Initialization is critical for preserving global data structure in both <i>t</i>-SNE and UMAP</a> (<em>Nature&nbsp;Biotechnology</em>,&nbsp;2021) <a href="pdfs/kobak2021initialization.pdf">pdf</a>
         <li><a href="https://link.springer.com/chapter/10.1007/978-3-030-46150-8_8">Heavy-tailed kernels reveal a finer cluster structure in t-SNE visualisations</a> (<em>ECML/PKDD</em>,&nbsp;2020)
         <li><a href="https://www.nature.com/articles/s41467-019-13056-x">The art of using t-SNE for single-cell transcriptomics</a> (<em>Nature&nbsp;Communications</em>,&nbsp;2019)
         </ul>
