--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <hr>
         <h2>Recent papers</h2>
-        <p>My recent papers, grouped by topics, are listed below. I am only listing [co-]first/last author papers here; see Google Scholar page linked above for a complete list. Most papers are open access; for the ones that are not I provide PDFs.
+        <p>Recent papers are listed below, grouped by topics. I am only listing [co-]first/last author papers here; see [Google Scholar page](https://scholar.google.com/citations?user=BUQbD5kAAAAJ) for the complete list. Most papers are open access; for the ones that are not I provide PDFs.
 
         <h3>t-SNE and all that</h3>
         <ul>
@@ -78,7 +78,7 @@
         <ul>
             <li><a href="https://www.biorxiv.org/content/10.1101/2020.12.01.405886v1">Analytic Pearson residuals for normalization of single-cell RNA-seq UMI data</a> (<em>bioRxiv</em>,&nbsp;2020)
             <li><a href="https://arxiv.org/abs/2006.10411">Sparse bottleneck networks for exploratory analysis and visualization of neural Patch-seq data</a> (<em>arXiv</em>,&nbsp;2020)
-            <li><a href="https://www.biorxiv.org/content/10.1101/302208v3">Sparse reduced-rank regression for exploratory visualization of paired multivariate datasets</a> (<em>bioRxiv</em>,&nbsp;2018)
+            <li><a href="https://www.biorxiv.org/content/10.1101/302208v3">Sparse reduced-rank regression for exploratory visualization of paired multivariate datasets</a> (<em>bioRxiv</em>,&nbsp;2018; <em>Journal&nbsp;of&nbsp;Royal&nbsp;Statistical&nbsp;Society C</em>, in&nbsp;press)
         </ul>
         
         <h3>Machine learning & statistical theory</h3>
