--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <hr>
         <h2>Recent papers</h2>
-        <p>Recent papers are listed below, grouped by topics. I am only listing [co-]first/last author papers here; see [Google Scholar page](https://scholar.google.com/citations?user=BUQbD5kAAAAJ) for the complete list. Most papers are open access; for the ones that are not I provide PDFs.
+        <p>Recent papers are listed below, grouped by topics. I am only listing [co-]first/last author papers here; see my <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar page</a> for the complete list. Most papers are open access; for the ones that are not I provide PDFs.
 
         <h3>t-SNE and all that</h3>
         <ul>
