--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
         <hr>
         <h2>Recent papers</h2>
-        <p>Recent papers are listed below, grouped by topics. I am only listing [co-]first/last author papers here; see my <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar page</a> for the complete list. Most papers are open access; for the ones that are not I provide PDFs.
+        <p>Recent papers are listed below, grouped by topics. I am only listing [co-]first/last author papers here; see my <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar page</a> for the complete list. Most papers are open access; for the ones that are not I provide PDFs. Twitter icons link to the respective Twitter threads (tweeprints). 
 
         <h3>t-SNE and all that</h3>
         <ul>
-            <li><a href="https://arxiv.org/abs/2007.08902">A unifying perspective on neighbor embeddings along the attraction-repulsion spectrum</a> (<em>arXiv</em>,&nbsp;2020) &mdash; <a href="https://twitter.com/hippopedoid/status/1285154214147235840"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-right:5px;margin-bottom:-.2em">Twitter thread</a>
-            <li><a href="https://www.nature.com/articles/s41587-020-00809-z">Initialization is critical for preserving global data structure in both <i>t</i>-SNE and UMAP</a> (<em>Nature&nbsp;Biotechnology</em>,&nbsp;2021) <a href="pdfs/kobak2021initialization.pdf">pdf</a>
+            <li><a href="https://arxiv.org/abs/2007.08902">A unifying perspective on neighbor embeddings along the attraction-repulsion spectrum</a> (<em>arXiv</em>,&nbsp;2020)&nbsp;<a href="https://twitter.com/hippopedoid/status/1285154214147235840"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
+            <li><a href="https://www.nature.com/articles/s41587-020-00809-z">Initialization is critical for preserving global data structure in both <i>t</i>-SNE and UMAP</a> (<em>Nature&nbsp;Biotechnology</em>,&nbsp;2021;&nbsp;<a href="pdfs/kobak2021initialization.pdf">PDF</a>)&nbsp;<a href="https://twitter.com/hippopedoid/status/1207999178015727616"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>&nbsp;<a href="https://twitter.com/hippopedoid/status/1356286119621636098"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://link.springer.com/chapter/10.1007/978-3-030-46150-8_8">Heavy-tailed kernels reveal a finer cluster structure in t-SNE visualisations</a> (<em>ECML/PKDD</em>,&nbsp;2020)
             <li><a href="https://www.nature.com/articles/s41467-019-13056-x">The art of using t-SNE for single-cell transcriptomics</a> (<em>Nature&nbsp;Communications</em>,&nbsp;2019)
         </ul>
