--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         
         <h3>Statistical methods for transcriptomic and multi-omic data analysis</h3>
         <ul>
-            <li><a href="https://www.biorxiv.org/content/10.1101/2020.12.01.405886v1">Analytic Pearson residuals for normalization of single-cell RNA-seq UMI data</a> (<em>bioRxiv</em>,&nbsp;2020)&nbsp;<a href="https://twitter.com/hippopedoid/status/1337028792678830084"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
+            <li><a href="https://www.biorxiv.org/content/10.1101/2020.12.01.405886">Analytic Pearson residuals for normalization of single-cell RNA-seq UMI data</a> (<em>bioRxiv</em>,&nbsp;2020)&nbsp;<a href="https://twitter.com/hippopedoid/status/1337028792678830084"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://arxiv.org/abs/2006.10411">Sparse bottleneck networks for exploratory analysis and visualization of neural Patch-seq data</a> (<em>arXiv</em>,&nbsp;2020)
             <li><a href="https://rss.onlinelibrary.wiley.com/doi/10.1111/rssc.12494">Sparse reduced-rank regression for exploratory visualisation of paired multivariate data</a> (<em>Journal&nbsp;of&nbsp;Royal&nbsp;Statistical&nbsp;Society&nbsp;C</em>,&nbsp;2021)&nbsp;<a href="https://twitter.com/hippopedoid/status/1401867282272378884"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
         </ul>
