--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         
         <h3>+ Excess mortality / Covid-19 forensics</h3>
         <ul>
-            <li><a href="https://www.medrxiv.org/content/10.1101/2022.02.11.22270841v1">Underdispersion in the reported Covid-19 case and death numbers may suggest data manipulations</a> (medRxiv,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1361306449952071683"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
+            <li><a href="https://www.medrxiv.org/content/10.1101/2022.02.11.22270841v1">Underdispersion in the reported Covid-19 case and death numbers may suggest data manipulations</a> (<em>medRxiv</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1361306449952071683"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://rss.onlinelibrary.wiley.com/doi/10.1111/1740-9713.01486">Excess mortality reveals Covid's true toll in Russia</a> (<em>Significance</em>,&nbsp;2021)&nbsp;<a href="https://twitter.com/hippopedoid/status/1357615482153631744"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://elifesciences.org/articles/69336">Tracking excess mortality across countries during the COVID-19 pandemic with the World Mortality Dataset</a> (<em>eLife</em>,&nbsp;2021)&nbsp;<a href="https://twitter.com/hippopedoid/status/1355155183727235073"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
         </ul>
