--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <hr>
         <h2>Talks</h2>
         <ul>
-        <li><a href="https://www.youtube.com/watch?v=CsUqmug7ZMc">Neighbour embeddings for scientific visualization</a>, June 2021, ELLIS Life Heidelberg.
+            <li><a href="https://www.youtube.com/watch?v=qt8z-MzIwpg">What are 2D neighbour embeddings of scRNA-seq data actually useful for?</a>, April 2022,  GTRL workshop at ICLR 2022.           
+            <li><a href="https://www.youtube.com/watch?v=CsUqmug7ZMc">Neighbour embeddings for scientific visualization</a>, June 2021, ELLIS Life Heidelberg.
         </ul>
         
         <hr>
@@ -82,7 +83,7 @@
         <ul>
             <li><a href="https://github.com/fsvbach">Fynn Bachmann</a> (2021)
             <li><a href="https://github.com/ritagonmar">Rita González Márquez</a> (2021)
-            <li><a href="https://github.com/jnboehm">Niklas Böhm</a> (2020)                
+            <li><a href="https://github.com/jnboehm">Niklas Böhm</a> (2020)
         </ul>
 
         <hr>
