--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
         <h3>t-SNE and all that</h3>
         <ul>
+            <li><a href="https://arxiv.org/abs/2210.09879">Unsupervised visualization of image datasets using contrastive learning (<em>arXiv</em>,&nbsp;2022)
             <li><a href="https://arxiv.org/abs/2206.01816">Contrastive learning unifies <em>t</em>-SNE and UMAP</a> (<em>arXiv</em>,&nbsp;2022)
             <li><a href="https://arxiv.org/abs/2205.07531">Wasserstein <em>t</em>-SNE</a> (<em>arXiv</em>,&nbsp;2022)
             <li><a href="https://openreview.net/forum?id=Hebl3EZ16lq">Two-dimensional visualization of large document libraries using t-SNE</a> (<em>ICLR&nbsp;GTRL&nbsp;workshop</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/ritagonmar/status/1519980241137111041"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
