--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <h2>Recent papers</h2>
         <p>Recent papers are listed below, grouped by topics. I am only listing [co-]first/last author papers here; see my <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar page</a> for the complete list. Most papers are open access; for the ones that are not I provide PDFs. Twitter icons link to the respective Twitter threads (tweeprints). 
 
-        <h3>t-SNE and all that</h3>
+        <h3>Neighbour embeddings and contrastive learning</h3>
         <ul>
-            <li><a href="https://arxiv.org/abs/2210.09879">Unsupervised visualization of image datasets using contrastive learning (<em>arXiv</em>,&nbsp;2022)
+            <li><a href="https://arxiv.org/abs/2210.09879">Unsupervised visualization of image datasets using contrastive learning</a> (<em>arXiv</em>,&nbsp;2022)
             <li><a href="https://arxiv.org/abs/2206.01816">Contrastive learning unifies <em>t</em>-SNE and UMAP</a> (<em>arXiv</em>,&nbsp;2022)
             <li><a href="https://arxiv.org/abs/2205.07531">Wasserstein <em>t</em>-SNE</a> (<em>arXiv</em>,&nbsp;2022)
             <li><a href="https://openreview.net/forum?id=Hebl3EZ16lq">Two-dimensional visualization of large document libraries using t-SNE</a> (<em>ICLR&nbsp;GTRL&nbsp;workshop</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/ritagonmar/status/1519980241137111041"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
