--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 
         <h3>Neighbour embeddings and contrastive learning</h3>
         <ul>
-            <li><a href="https://arxiv.org/abs/2210.09879">Unsupervised visualization of image datasets using contrastive learning</a> (<em>arXiv</em>,&nbsp;2022)
-            <li><a href="https://arxiv.org/abs/2206.01816">Contrastive learning unifies <em>t</em>-SNE and UMAP</a> (<em>arXiv</em>,&nbsp;2022)
+            <li><a href="https://arxiv.org/abs/2210.09879">Unsupervised visualization of image datasets using contrastive learning</a> (<em>arXiv</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1598639141004124161"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
+            <li><a href="https://arxiv.org/abs/2206.01816">Contrastive learning unifies <em>t</em>-SNE and UMAP</a> (<em>arXiv</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1588157733437595648"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://arxiv.org/abs/2205.07531">Wasserstein <em>t</em>-SNE</a> (<em>arXiv</em>,&nbsp;2022)
-            <li><a href="https://openreview.net/forum?id=Hebl3EZ16lq">Two-dimensional visualization of large document libraries using t-SNE</a> (<em>ICLR&nbsp;GTRL&nbsp;workshop</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/ritagonmar/status/1519980241137111041"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
-            <li><a href="https://jmlr.org/papers/v23/21-0055.html"> Attraction-repulsion spectrum in neighbor embeddings </a> (<em>JMLR</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1285154214147235840"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
+            <li><a href="https://proceedings.mlr.press/v196/gonzalez-marquez22a.html">Two-dimensional visualization of large document libraries using t-SNE</a> (<em>ICLR&nbsp;GTRL&nbsp;workshop</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/ritagonmar/status/1519980241137111041"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
+            <li><a href="https://jmlr.org/papers/v23/21-0055.html">Attraction-repulsion spectrum in neighbor embeddings </a> (<em>JMLR</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1285154214147235840"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://www.nature.com/articles/s41587-020-00809-z">Initialization is critical for preserving global data structure in both <i>t</i>-SNE and UMAP</a> (<em>Nature&nbsp;Biotechnology</em>,&nbsp;2021;&nbsp;<a href="pdfs/kobak2021initialization.pdf">PDF</a>)&nbsp;<a href="https://twitter.com/hippopedoid/status/1207999178015727616"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>&nbsp;<a href="https://twitter.com/hippopedoid/status/1356286119621636098"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://link.springer.com/chapter/10.1007/978-3-030-46150-8_8">Heavy-tailed kernels reveal a finer cluster structure in t-SNE visualisations</a> (<em>ECML/PKDD</em>,&nbsp;2020)&nbsp;<a href="https://twitter.com/hippopedoid/status/1263238032360079361"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://www.nature.com/articles/s41467-019-13056-x">The art of using t-SNE for single-cell transcriptomics</a> (<em>Nature&nbsp;Communications</em>,&nbsp;2019)&nbsp;<a href="https://twitter.com/hippopedoid/status/1206535867831083008"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
@@ -190,7 +190,7 @@ Political Analysis 2</pre></div>
 
 Review lengths in kB</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: November 22, 2022
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: December 8, 2022
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </div>
