--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <ul>
             <li><a href="https://arxiv.org/abs/2210.09879">Unsupervised visualization of image datasets using contrastive learning</a>&nbsp;<a href="https://arxiv.org/pdf/2210.09879.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>arXiv</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1598639141004124161"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://arxiv.org/abs/2206.01816">Contrastive learning unifies <em>t</em>-SNE and UMAP</a>&nbsp;<a href="https://arxiv.org/pdf/2206.01816"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>arXiv</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1588157733437595648"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
-            <li><a href="https://arxiv.org/abs/2205.07531">Wasserstein <em>t</em>-SNE</a>&nbsp;<a href="https://arxiv.org/pdf/2205.07531"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ECML/PKDD</em>,&nbsp;2022)
+            <li><a href="https://arxiv.org/abs/2205.07531">Wasserstein <em>t</em>-SNE</a>&nbsp;<a href="https://arxiv.org/pdf/2205.07531"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ECML/PKDD</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1605543276752224257"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://proceedings.mlr.press/v196/gonzalez-marquez22a.html">Two-dimensional visualization of large document libraries using t-SNE</a>&nbsp;<a href="https://proceedings.mlr.press/v196/gonzalez-marquez22a/gonzalez-marquez22a.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ICLR&nbsp;GTRL&nbsp;workshop</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/ritagonmar/status/1519980241137111041"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://jmlr.org/papers/v23/21-0055.html">Attraction-repulsion spectrum in neighbor embeddings</a>&nbsp;<a href="https://jmlr.org/papers/volume23/21-0055/21-0055.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>JMLR</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1285154214147235840"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li><a href="https://www.nature.com/articles/s41587-020-00809-z">Initialization is critical for preserving global data structure in both <i>t</i>-SNE and UMAP</a>&nbsp;<a href="pdfs/kobak2021initialization.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>Nature&nbsp;Biotechnology</em>,&nbsp;2021)&nbsp;<a href="https://twitter.com/hippopedoid/status/1207999178015727616"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>&nbsp;<a href="https://twitter.com/hippopedoid/status/1356286119621636098"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
@@ -190,7 +190,7 @@ Political Analysis 2</pre></div>
 
 Review lengths in kB</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: December 8, 2022
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: December 21, 2022
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </div>
