--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <p><img src="googlescholar_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ"><b>Google Scholar</b></a>
         
         <p>
-        <div><img src="orcid_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="http://orcid.org/0000-0002-5639-7209" style="margin-right:1em">ORCID</a></div>
-        <div><img src="github_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://github.com/dkobak/" style="margin-right:1em">Github</a></div>
-        <div><img src="pubmed_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://pubmed.ncbi.nlm.nih.gov/?term=dmitry+kobak%5BAuthor%5D&sort=date" style="margin-right:1em">Pubmed</a></div>
-        <div><img src="dblp_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://dblp.org/pid/236/5191" style="margin-right:1em">Dblp</a></div>
+        <img src="orcid_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="http://orcid.org/0000-0002-5639-7209" style="margin-right:1em">ORCID</a>
+        <img src="github_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://github.com/dkobak/" style="margin-right:1em">Github</a>
+        <img src="pubmed_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://pubmed.ncbi.nlm.nih.gov/?term=dmitry+kobak%5BAuthor%5D&sort=date" style="margin-right:1em">Pubmed</a>
+        <img src="dblp_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://dblp.org/pid/236/5191" style="margin-right:1em">Dblp</a>
         
         <p>
         <img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-right:5px;margin-bottom:-.2em"><a href="https://twitter.com/hippopedoid">@hippopedoid on Twitter</a><br>
