--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 style="color:red">НЕТ ВОЙНЕ | STOP THE WAR</h2>
         
         <p style="clear:both">I am a research scientist and a group leader in the <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University, Germany. I am interested in unsupervised learning, in particular manifold learning and dimensionality reduction for 2D visualization of biological datasets. I am mostly working with single-cell RNA-seq data coming from the brain.
-        <p>I am also interested in statistical forensics and have been involved in the analysis of Russian electoral falisifications and Covid-19 excess mortality. 
+        <p>I am also interested in statistical forensics and have been involved in the analysis of Russian electoral falsifications and Covid-19 excess mortality. 
         <p>I am a member of the <a href="https://ellis.eu/members">ELLIS society</a>.
         
         <hr>
