--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <hr>
         <h2>Teaching</h2>
-        <p>I am teaching an introductory course on machine learning (Machine Learning I) for MSc students in neuroscience. In the winter semester 2020/21, due to the Covid pandemic, the class was online and the lectures were recorded in a studio.
+        <p>For several years I have been teaching an introductory course on machine learning (Machine Learning I) for MSc students in neuroscience and data science. In winter semester 2020/21, due to the Covid pandemic, the class was held online and the lectures were recorded in a studio.
         <ul>
         <li>Videos: <a href="https://www.youtube.com/playlist?list=PL05umP7R6ij35ShKLDqccJSDntugY4FQT">Tübingen Machine Learning / Introduction to Machine Learning</a>
         <li>Slides: 
