--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 2019  1
 2020  15
 2021  20
-2022  22</pre></div>
+2022  22
+2023  2</pre></div>
 
 <div style="margin-right:100px"><pre>Venue              Reviews (>1)
 -------------------------------
@@ -170,9 +171,10 @@ ECML               8
 ICLR               6
 AISTATS            3
 Bioinformatics     3
-Genome Biology     2
+Genome Biology     3
 ICML               2
 JMLR               2
+Nature Comm.       2
 Nature Methods     2
 PLoS Comp Bio      2
 Political Analysis 2</pre></div>
@@ -180,17 +182,17 @@ Political Analysis 2</pre></div>
 <div><pre> 0 | 
  1 | .........
  2 | ..........
- 3 | ...........
+ 3 | ............
  4 | ........
  5 | .....
- 6 | .........
+ 6 | ..........
  7 | ...
  8 | ..
  9 | .
 
 Review lengths in kB</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: January 21, 2023
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: February 8, 2023
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </div>
