--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         
         <hr>
         <h2>Supervision / team</h2>
+        Postdocs:
         <ul>
             <li><a href="https://scholar.google.com/citations?user=-ClpooYAAAAJ">Sebastian Damrich</a> (started in 2023)
         </ul>        
