--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
         <h3>Neighbour embeddings and contrastive learning</h3>
         <ul>
+            <li>González-Márquez et al., <a href="https://www.biorxiv.org/content/10.1101/2023.04.10.536208v1">The landscape of biomedical research</a>&nbsp;<a href="https://www.biorxiv.org/content/10.1101/2023.04.10.536208v1.full.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>bioRxiv</em>,&nbsp;2023)&nbsp;<a href="https://twitter.com/hippopedoid/status/1646512926277394436"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Böhm et al., <a href="https://arxiv.org/abs/2210.09879">Unsupervised visualization of image datasets using contrastive learning</a>&nbsp;<a href="https://arxiv.org/pdf/2210.09879.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em style="color:red">Accepted&nbsp;to&nbsp;ICLR&nbsp;2023</em> 🥳)&nbsp;<a href="https://twitter.com/hippopedoid/status/1588157733437595648"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Damrich et al., <a href="https://arxiv.org/abs/2206.01816">Contrastive learning unifies <em>t</em>-SNE and UMAP</a>&nbsp;<a href="https://arxiv.org/pdf/2206.01816"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em style="color:red">Accepted&nbsp;to&nbsp;ICLR&nbsp;2023</em> 🥳)&nbsp;<a href="https://twitter.com/hippopedoid/status/1598639141004124161"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Bachmann et al., <a href="https://link.springer.com/chapter/10.1007/978-3-031-26387-3_7">Wasserstein <em>t</em>-SNE</a>&nbsp;<a href="https://link.springer.com/content/pdf/10.1007/978-3-031-26387-3_7.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ECML/PKDD</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1605543276752224257"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
@@ -196,7 +197,7 @@ Political Analysis 2</pre></div>
 
 Review lengths in kB</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: March 23, 2023
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: April 15, 2023
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </div>
