--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         </ul>
         MSc students:
         <ul>
+            <li><a href="https://scholar.google.com/citations?user=cn2rZJ8AAAAJ">Marius Keute</a> (started in 2023)
             <li><a href="https://scholar.google.com/citations?user=Wa4htm8AAAAJ">Fynn Bachmann</a> (2021) → PhD student at the university of Zürich
             <li><a href="https://scholar.google.com/citations?user=RAfipNgAAAAJ">Rita González Márquez</a> (2021) → PhD student
             <li><a href="https://scholar.google.com/citations?user=CWHChI8AAAAJ">Niklas Böhm</a> (2020) → PhD student
@@ -197,7 +198,7 @@ Political Analysis 2</pre></div>
 
 Review lengths in kB</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: April 15, 2023
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: April 25, 2023
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </div>
