--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         <hr>
         <h2>Talks</h2>
         <ul>
+            <li><a href="https://www.youtube.com/watch?v=A2HmdO8cApw">Contrastive and neighbor embedding methods for data visualisation</a>, April&nbsp;2023,&nbsp;Network&nbsp;Seminar.
+            <li><a href="https://www.youtube.com/watch?v=yKHtbWHP4Fg">Контрастные методы и методы ближайших соседей для визуализации данных</a>, May&nbsp;2023,&nbsp;SciBerloga&nbsp;Seminar.
             <li><a href="https://www.youtube.com/watch?v=qt8z-MzIwpg">What are 2D neighbour embeddings of scRNA-seq data actually useful for?</a>, April&nbsp;2022,&nbsp;ICLR&nbsp;GTRL&nbsp;workshop.
             <li><a href="https://www.youtube.com/watch?v=CsUqmug7ZMc">Neighbour embeddings for scientific visualization</a>, June&nbsp;2021,&nbsp;ELLIS&nbsp;Life&nbsp;Heidelberg.
         </ul>
@@ -198,7 +200,7 @@ Political Analysis 2</pre></div>
 
 Review lengths in kB</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: May 26, 2023
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: Jun 14, 2023
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </div>
