--- a/teaching/einfuehrung-ins-ml/index.html
+++ b/teaching/einfuehrung-ins-ml/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="favicon.ico">
     
-        <title>Dmitry Kobak</title>
+        <title>Einführung ins Machinelle Lernen</title>
         <style>
             html{margin:0; padding:0}
             body{max-width:900px; margin:40px auto; padding:0 10px; font-size:18px; font-family: sans-serif; line-height:1.3; color:#444}
