--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </ul>
         MSc students:
         <ul>
-            <li><a href="https://scholar.google.com/citations?user=cn2rZJ8AAAAJ">Marius Keute</a> (started in 2023)
+            <li><a href="https://scholar.google.com/citations?user=cn2rZJ8AAAAJ">Marius Keute</a> (2023)
             <li><a href="https://scholar.google.com/citations?user=Wa4htm8AAAAJ">Fynn Bachmann</a> (2021) → PhD student at the university of Zürich
             <li><a href="https://scholar.google.com/citations?user=RAfipNgAAAAJ">Rita González Márquez</a> (2021) → PhD student
             <li><a href="https://scholar.google.com/citations?user=CWHChI8AAAAJ">Niklas Böhm</a> (2020) → PhD student
