--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <img src="crossvalidated_16x16.png" alt="" width=16 height=16 style="margin-right:5px;margin-bottom:-.2em"><a href="https://stats.stackexchange.com/users/28666">@amoeba at CrossValidated.SE</a>
         </header>
         
-        <p style="clear:both">I am a research scientist and a group leader in the <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University, Germany. From October 2023 to March 2024 I am a visiting professor (Vertretungsprofessor) for image analysis at Heidelberg University, Germany.
-        <p></p>I am interested in unsupervised and self-supervised learning, in particular contrastive learning, manifold learning, and dimensionality reduction for 2D visualization of biological datasets. I am mostly working with single-cell RNA-seq data coming from the brain.
-        <p>I am also interested in statistical forensics and have been involved in the analysis of Russian electoral falsifications and Covid-19 excess mortality. 
+        <p style="clear:both">From October 2023 to March 2024 I am a visiting professor (Vertretungsprofessor) for image analysis at Heidelberg University, Germany. Other then that, I am a research scientist and a group leader in the <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University, Germany. 
+        <p></p>I am interested in self-supervised and unsupervised learning, in particular contrastive learning, manifold learning, and dimensionality reduction for 2D visualization of scientific datasets. I am working with image data, text data, graph data, and single-cell RNA-seq data in neuroscience contexts.
+        <p>I am also interested in statistical forensics and have been involved in the analysis of Russian electoral falsifications, Russian war fatalities, and Covid-19 excess mortality. 
         <p>I am a <a href="https://ellis.eu/members">member of the ELLIS society</a> and an <a href="https://imprs.is.mpg.de/associated-scientists">IMPRS-IS associated scientist</a>.
         
         <hr>
         <h2>Teaching</h2>
-        <p><b>Winter semester 2023/24 (Heidelberg):</b> BSc course <a href="teaching/einfuehrung-ins-ml/"><i>Einführung ins Machinelle Lernen</i></a>, MSc seminar <a href="teaching/transformers-llm-seminar/"><i>Transformers, large language models, and their use in physics</i></a>.
+        <p><b>Winter semester 2023/24 (Heidelberg):</b> BSc course <a href="teaching/einfuehrung-ins-ml/"><i>Einführung ins Machinelle Lernen</i></a> (in German), MSc seminar <a href="teaching/transformers-llm-seminar/"><i>Transformers, large language models, and their use in physics</i></a>.
         <p><b>2020&ndash;2023 (Tübingen):</b> For several years I was teaching an introductory course on machine learning for MSc students in neuroscience and data science. In winter semester 2020/21, due to the Covid pandemic, the class was held online and the lectures were recorded in a studio.
         <ul>
         <li>Videos: <a href="https://www.youtube.com/playlist?list=PL05umP7R6ij35ShKLDqccJSDntugY4FQT">Tübingen Machine Learning / Introduction to Machine Learning</a>
