--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
             <li>Kobak et al., <a href="https://link.springer.com/chapter/10.1007/978-3-030-46150-8_8">Heavy-tailed kernels reveal a finer cluster structure in t-SNE visualisations</a>&nbsp;<a href="https://link.springer.com/content/pdf/10.1007/978-3-030-46150-8_8.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ECML/PKDD</em>,&nbsp;2020)&nbsp;<a href="https://twitter.com/hippopedoid/status/1263238032360079361"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Kobak & Berens, <a href="https://www.nature.com/articles/s41467-019-13056-x">The art of using t-SNE for single-cell transcriptomics</a>&nbsp;<a href="https://www.nature.com/articles/s41467-019-13056-x.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>Nature&nbsp;Communications</em>,&nbsp;2019)&nbsp;<a href="https://twitter.com/hippopedoid/status/1206535867831083008"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
         </ul>
+
+        <h3>Topological data analysis</h3>
+        <ul>
+            <li>Damrich et al., <a href="https://arxiv.org/abs/2311.03087">Persistent homology for high-dimensional data based on spectral methods</a></li>>&nbsp;<a href="https://arxiv.org/pdf/2311.03087.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>arXiv</em>,&nbsp;2023)
+        </ul>
         
         <h3>Statistical methods for transcriptomic and multi-omic data analysis</h3>
         <ul>
