--- a/teaching/transformers-llm-seminar/index.html
+++ b/teaching/transformers-llm-seminar/index.html
@@ -63,12 +63,12 @@
                 <ul>
                 <li>Bubeck et al, <a href="https://arxiv.org/abs/2303.12712">Sparks of Artificial General Intelligence: Early experiments with GPT-4</a>
                 </ul>
-            <li>GPT-4 cannot self-critique
+            <li>GPT-4 cannot self-critique / plan
                 <ul>
                 <li>Stechly et al., <a href="https://arxiv.org/abs/2310.12397">GPT-4 Doesn't Know It's Wrong: An Analysis of Iterative Prompting for Reasoning Problems</a>
                 <li>Valmeekam et al, <a href="https://arxiv.org/abs/2310.08118">Can Large Language Models Really Improve by Self-critiquing Their Own Plans?</a>
                 </ul>
-            <li>GPT cannot plan
+            <li>Systematic cognitive evaluation
                 <ul>
                 <li>Mommenejad et al., <a href="https://arxiv.org/abs/2309.15129">Evaluating Cognitive Maps and Planning in Large Language Models with CogEval</a>
                 </ul>
