--- a/index.html
+++ b/index.html
@@ -105,10 +105,14 @@
         <h2>Research</h2>
         <p>This is a list of [co-]first-/last-author papers grouped by topic; see my <a href="https://scholar.google.com/citations?user=BUQbD5kAAAAJ">Google Scholar page</a> for the complete list. Most papers are open access; for the ones that are not I provide PDFs. Twitter icons link to the respective Twitter threads (tweeprints). 
 
-        <h3>Neighbour embeddings and contrastive learning</h3>
+        <h3>Self-supervised learning</h3>
+        <ul>
+            <li>Böhm et al., <a href="https://openreview.net/forum?id=nI2HmVA0hvt">Unsupervised visualization of image datasets using contrastive learning</a>&nbsp;<a href="https://openreview.net/pdf?id=nI2HmVA0hvt"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ICLR&nbsp;2023</em>)&nbsp;<a href="https://twitter.com/hippopedoid/status/1588157733437595648"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
+        </ul>
+
+        <h3>Neighbour embeddings</h3>
         <ul>
             <li>González-Márquez et al., <a href="https://www.biorxiv.org/content/10.1101/2023.04.10.536208">The landscape of biomedical research</a>&nbsp;<a href="https://www.biorxiv.org/content/10.1101/2023.04.10.536208.full.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>bioRxiv</em>,&nbsp;2023)&nbsp;<a href="https://twitter.com/hippopedoid/status/1646512926277394436"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
-            <li>Böhm et al., <a href="https://openreview.net/forum?id=nI2HmVA0hvt">Unsupervised visualization of image datasets using contrastive learning</a>&nbsp;<a href="https://openreview.net/pdf?id=nI2HmVA0hvt"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ICLR&nbsp;2023</em>)&nbsp;<a href="https://twitter.com/hippopedoid/status/1588157733437595648"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Damrich et al., <a href="https://openreview.net/forum?id=B8a1FcY0vi">From <em>t</em>-SNE to UMAP with contrastive learning</a>&nbsp;<a href="https://openreview.net/pdf?id=B8a1FcY0vi"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ICLR&nbsp;2023</em>)&nbsp;<a href="https://twitter.com/hippopedoid/status/1598639141004124161"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Bachmann et al., <a href="https://link.springer.com/chapter/10.1007/978-3-031-26387-3_7">Wasserstein <em>t</em>-SNE</a>&nbsp;<a href="https://link.springer.com/content/pdf/10.1007/978-3-031-26387-3_7.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ECML/PKDD</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1605543276752224257"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>González-Márquez et al., <a href="https://proceedings.mlr.press/v196/gonzalez-marquez22a.html">Two-dimensional visualization of large document libraries using t-SNE</a>&nbsp;<a href="https://proceedings.mlr.press/v196/gonzalez-marquez22a/gonzalez-marquez22a.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ICLR&nbsp;GTRL&nbsp;workshop</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/ritagonmar/status/1519980241137111041"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
@@ -185,7 +189,7 @@
 2020  15
 2021  20
 2022  22
-2023  26</pre></div>
+2023  27</pre></div>
 
 <div style="margin:0 auto"><pre>Venue              Reviews (>1)
 -------------------------------
@@ -216,7 +220,7 @@ TMLR               2</pre></div>
 
 Review lengths in kB</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: Nov 21, 2023
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: Dec 14, 2023
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </body>
