--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <img src="crossvalidated_16x16.png" alt="" width=16 height=16 style="margin-right:5px;margin-bottom:-.2em"><a href="https://stats.stackexchange.com/users/28666">@amoeba at CrossValidated.SE</a>
         </header>
         
-        <p style="clear:both">I am a research scientist and a group leader in the <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University, Germany. In 2023/2024 winter semester I was a <i>Vertretungsprofessor</i> (visiting professor) at Heidelberg University, Germany.
-        <p></p>I am interested in self-supervised and unsupervised learning, in particular contrastive learning, manifold learning, and dimensionality reduction for 2D visualization of scientific datasets. I am working with image data, text data, graph data, and single-cell RNA-seq data in neuroscience contexts.
+        <p style="clear:both">I am a research scientist and a group leader in the <a href="http://www.berenslab.org">Berens lab</a> at Tübingen University, Germany, working on machine learning and data science for biological applications.
+        <p>I am interested in self-supervised and unsupervised learning, in particular contrastive learning, manifold learning, and dimensionality reduction for 2D visualization of scientific datasets. I am working with image data, text data, graph data, and single-cell RNA-seq data in neuroscience contexts.
         <p>I am also interested in statistical forensics and have been involved in the analysis of Russian electoral falsifications, Russian war fatalities, and Covid-19 excess mortality. 
-        <p>I am a <a href="https://ellis.eu/members">member of the ELLIS society</a> and an <a href="https://imprs.is.mpg.de/associated-scientists">IMPRS-IS associated scientist</a>.
+        <p>In 2023/2024 winter semester I was a <i>Vertretungsprofessor</i> (visiting professor) at Heidelberg University, Germany. I am a <a href="https://ellis.eu/members">member of the ELLIS society</a> and an <a href="https://imprs.is.mpg.de/associated-scientists">IMPRS-IS associated scientist</a>.
         
         <hr>
         <h2>Teaching</h2>
