--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         
         <h3>Machine learning & statistical theory</h3>
         <ul>
-            <li>Greydanus & Kobak, <a href="https://arxiv.org/abs/2011.14439">Scaling down deep learning with MNIST-1D</a>&nbsp;<a href="https://arxiv.org/pdf/2011.14439"><img src="pdf_16x16.png" alt="" width=16 height=16></a> <span style="color:red;font-weight:bold">(<em>ICML</em>,&nbsp;2024)</span>
+            <li>Greydanus & Kobak, <a href="https://openreview.net/forum?id=n9pru4bJU9">Scaling down deep learning with MNIST-1D</a>&nbsp;<a href="https://openreview.net/pdf?id=n9pru4bJU9"><img src="pdf_16x16.png" alt="" width=16 height=16></a> <span style="color:red;font-weight:bold">(<em>ICML</em>,&nbsp;2024)</span>
             <li>Kobak et al., <a href="https://jmlr.org/papers/v21/19-844.html">The optimal ridge penalty for real-world high-dimensional data can be zero or negative due to the implicit ridge regularization</a>&nbsp;<a href="https://jmlr.org/papers/volume21/19-844/19-844.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>JMLR</em>,&nbsp;2020)&nbsp;<a href="https://twitter.com/hippopedoid/status/1250391223094968321"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
         </ul>
         
