--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="favicon.ico">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     
         <title>Dmitry Kobak</title>
         <style>
             html{margin:0; padding:0}
-            body{max-width:900px; margin:40px auto; padding:0 10px; font-size:18px; font-family: sans-serif; line-height:1.3; color:#444}
+            body{max-width:900px; margin:40px auto; padding:0 10px; font-size:18px; font-family: 'Open Sans', sans-serif; line-height:1.3; color:#555}
             header{margin-bottom:3em;}
             li{margin-bottom:0.3em}
             hr{margin-top:2em; height:1px; border:none; color:#444; background-color:#444;}
