--- a/index.html
+++ b/index.html
@@ -160,17 +160,13 @@
             <li>Kobak et al., <a href="https://projecteuclid.org/euclid.aoas/1458909907">Integer percentages as electoral falsification fingerprints</a>&nbsp;<a href="https://projecteuclid.org/journalArticle/Download?urlId=10.1214%2F16-AOAS904"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>The&nbsp;Annals&nbsp;of&nbsp;Applied Statistics</em>,&nbsp;2016)
         </ul>
         
-        <h3>Excess mortality / Covid-19 forensics</h3>
+        <h3>Excess mortality / Covid-19 forensics / LLM forensics</h3>
         <ul>
+            <li>Kobak et al., <a href="https://arxiv.org/abs/2406.07016">Delving into ChatGPT usage in academic writing through excess vocabulary</a>&nbsp;<a href="https://arxiv.org/pdf/2406.07016"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>arXiv</em>,&nbsp;2024)&nbsp;<a href="https://twitter.com/hippopedoid/status/1804057603628012001"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Kobak et al., <a href="https://osf.io/preprints/socarxiv/xcrme/">War fatalities in Russia in 2022&ndash;2023 estimated via excess male mortality</a>&nbsp;<a href="https://osf.io/preprints/socarxiv/xcrme/download"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>SocArXiv</em>,&nbsp;2023)
             <li>Kobak, <a href="https://rss.onlinelibrary.wiley.com/doi/10.1111/1740-9713.01627">Underdispersion: A statistical anomaly in reported Covid data</a>&nbsp;<a href="https://rss.onlinelibrary.wiley.com/doi/pdfdirect/10.1111/1740-9713.01627?download=true"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>Significance</em>,&nbsp;2022)&nbsp;<a href="https://twitter.com/hippopedoid/status/1361306449952071683"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>&nbsp;<a href="https://twitter.com/hippopedoid/status/1518862282494824448"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Karlinsky & Kobak, <a href="https://elifesciences.org/articles/69336">Tracking excess mortality across countries during the COVID-19 pandemic with the World Mortality Dataset</a>&nbsp;<a href="https://elifesciences.org/download/aHR0cHM6Ly9jZG4uZWxpZmVzY2llbmNlcy5vcmcvYXJ0aWNsZXMvNjkzMzYvZWxpZmUtNjkzMzYtdjMucGRmP2Nhbm9uaWNhbFVyaT1odHRwczovL2VsaWZlc2NpZW5jZXMub3JnL2FydGljbGVzLzY5MzM2/elife-69336-v3.pdf?_hash=hyj20mQUGTJeKbW5fV1FlATrpEqy4xyJ6dJraKyKFaM%3D"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>eLife</em>,&nbsp;2021)&nbsp;<a href="https://twitter.com/hippopedoid/status/1355155183727235073"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Kobak, <a href="https://rss.onlinelibrary.wiley.com/doi/10.1111/1740-9713.01486">Excess mortality reveals Covid's true toll in Russia</a>&nbsp;<a href="https://rss.onlinelibrary.wiley.com/doi/pdfdirect/10.1111/1740-9713.01486?download=true"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>Significance</em>,&nbsp;2021)&nbsp;<a href="https://twitter.com/hippopedoid/status/1357615482153631744"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
-        </ul>
-
-        <h3>Data science</h3>
-        <ul>
-            <li>Kobak et al., <a href="https://arxiv.org/abs/2406.07016">Delving into ChatGPT usage in academic writing through excess vocabulary</a>&nbsp;<a href="https://arxiv.org/pdf/2406.07016"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>arXiv</em>,&nbsp;2024)&nbsp;<a href="https://twitter.com/hippopedoid/status/1804057603628012001"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
         </ul>
         
         <hr>
