--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <h3>Topological data analysis</h3>
         <ul>
-            <li>Damrich et al., <a href="https://arxiv.org/abs/2311.03087">Persistent homology for high-dimensional data based on spectral methods</a></li>&nbsp;<a href="https://arxiv.org/pdf/2311.03087.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>arXiv</em>,&nbsp;2023)
+            <li>Damrich et al., <a href="https://arxiv.org/abs/2311.03087">Persistent homology for high-dimensional data based on spectral methods</a></li>&nbsp;<a href="https://arxiv.org/pdf/2311.03087.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> <span style="color:red;font-weight:bold">(&nbsp;🥳&nbsp;<em>NeurIPS</em>,&nbsp;2024)</span>
         </ul>
         
         <h3>Statistical methods for transcriptomic and multi-omic data analysis</h3>
@@ -197,7 +197,7 @@
 2021  20
 2022  22
 2023  28
-2024  17</pre></div>
+2024  18</pre></div>
 
 <div style="margin:0 auto"><pre>Venue              Reviews (>1)
 -------------------------------
@@ -205,7 +205,7 @@ NeurIPS            25
 ECML               12
 ICML               12
 ICLR               11
-TMLR               8
+TMLR               9
 Bioinformatics     4
 Genome Biology     4
 AISTATS            3
