--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <img src="crossvalidated_16x16.png" alt="" width=16 height=16 style="margin-right:5px;margin-bottom:-.2em"><a href="https://stats.stackexchange.com/users/28666">@amoeba at CrossValidated.SE</a>
         </header>
         
-        <p style="clear:both">I am a group leader Department of Data Science of the <a href="https://hertie.ai/data-science">Hertie AI institute</a> at Tübingen University, Germany, working on machine learning and data science for biological applications.
+        <p style="clear:both">I am a group leader in the <a href="https://hertie.ai/data-science">Department of Data Science</a> of the <a href="https://hertie.ai">Hertie AI institute</a> at Tübingen University, Germany, working on machine learning and data science for biological applications.
         <p>I am interested in self-supervised and unsupervised learning, in particular contrastive learning, manifold learning, and dimensionality reduction for 2D visualization of scientific datasets. I am working with image data, text data, graph data, and single-cell RNA-seq data in neuroscience contexts.
         <p>I am also interested in statistical forensics and have been involved in the analysis of Russian electoral falsifications, war fatalities, and Covid-19 excess mortality. 
         <p>I am a <i>Privatdozent</i> at the Faculty of Computer Science. In 2023/24 winter semester I was a <i>Vertretungsprofessor</i> (visiting professor) at Heidelberg University, Germany. I am a <a href="https://ellis.eu/members">member of the ELLIS society</a>, a <a href="https://uni-tuebingen.de/en/166443">member of the Cluster of Excellence &laquo;Machine Learning for Science&raquo;</a>, and an <a href="https://imprs.is.mpg.de/associated-scientists">IMPRS-IS associated scientist</a>.
