--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="dblp_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://dblp.org/pid/236/5191" style="margin-right:1em">Dblp</a>
         </span>
         <span style="white-space:nowrap">
-        <img src="arxiv_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://arxiv.org/search/?searchtype=author&query=Kobak%252C+D" style="margin-right:1em">arXiv</a>
+        <img src="arxiv_16x16.png" alt="" width=16 height=16 style="margin-right:3px;margin-bottom:-.1em"><a href="https://arxiv.org/search/?searchtype=author&query=Kobak%2C+D&searchtype=author" style="margin-right:1em">arXiv</a>
         </span>
         
         <p>
