--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <h3>Topological data analysis</h3>
         <ul>
-            <li>Damrich et al., <a href="https://arxiv.org/abs/2311.03087">Persistent homology for high-dimensional data based on spectral methods</a></li>&nbsp;<a href="https://arxiv.org/pdf/2311.03087.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> <span style="color:red;font-weight:bold">(<em>NeurIPS</em>&nbsp;🥳&nbsp;2024)</span>
+            <li>Damrich et al., <a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/4a32a646254d2e37fc74a38d65796552-Abstract-Conference.html">Persistent homology for high-dimensional data based on spectral methods</a></li>&nbsp;<a href="https://proceedings.neurips.cc/paper_files/paper/2024/file/4a32a646254d2e37fc74a38d65796552-Paper-Conference.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> <span style="color:red;font-weight:bold">(<em>NeurIPS</em>&nbsp;🥳&nbsp;2024)</span>
         </ul>
         
         <h3>Statistical methods for transcriptomic and multi-omic data analysis</h3>
