--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
         <h3>Self-supervised learning</h3>
         <ul>
+            <li>Draganov et al., <a href="https://arxiv.org/abs/2502.09252">On the importance of embedding norms in self-supervised learning</a>&nbsp;<a href="https://arxiv.org/pdf/2502.09252"><img src="pdf_16x16.png" alt="" width=16 height=16></a> <span style="color:red;font-weight:bold">(<em>ICML</em>&nbsp;🥳&nbsp;2025)</span>
             <li>Nwabufo et al., <a href="https://arxiv.org/abs/2402.14566">Self-supervised visualisation of medical image datasets</a>&nbsp;<a href="https://arxiv.org/pdf/2402.14566"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>arXiv</em>,&nbsp;2024)
             <li>Böhm et al., <a href="https://openreview.net/forum?id=nI2HmVA0hvt">Unsupervised visualization of image datasets using contrastive learning</a>&nbsp;<a href="https://openreview.net/pdf?id=nI2HmVA0hvt"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>ICLR&nbsp;2023</em>)&nbsp;<a href="https://twitter.com/hippopedoid/status/1588157733437595648"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
         </ul>
@@ -203,19 +204,20 @@
 2022  22
 2023  28
 2024  23
-2025  9</pre></div>
+2025  10</pre></div>
 
 <div style="margin:0 auto"><pre>Venue              Reviews (>1)
 -------------------------------
 NeurIPS            25
+ICML               18
 ICLR               13
 ECML               12
-ICML               12
-TMLR               9
-Bioinformatics     4
+TMLR               10
+Bioinformatics     5
 Genome Biology     4
 AISTATS            3
 JMLR               3
+Nature Biotech.    2
 Nature Comm.       2
 Nature Methods     2
 PLoS Comp Bio      2
@@ -225,16 +227,16 @@ Political Analysis 2</pre></div>
 --------------------
  0 | 
  1 | .................
- 2 | ...............
- 3 | ...........................
- 4 | ...................
- 5 | ...........
+ 2 | ................
+ 3 | ..................................
+ 4 | ......................
+ 5 | ............
  6 | ............
  7 | ...
  8 | ..
  9 | .</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: Mar 28, 2025
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: May 26, 2025
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </body>
