--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <h3>Neighbour embeddings</h3>
         <ul>
-            <li>Böhm, Keute et al., <a href="https://arxiv.org/abs/2503.23822">Node embeddings via neighbor embeddings</a>&nbsp;<a href="https://arxiv.org/pdf/2503.23822"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>arXiv</em>,&nbsp;2025)
+            <li>Böhm, Keute et al., <a href="https://openreview.net/forum?id=8APIU9cauZ">Node embeddings via neighbor embeddings</a>&nbsp;<a href="https://openreview.net/pdf?id=8APIU9cauZ"><img src="pdf_16x16.png" alt="" width=16 height=16></a> <span style="color:red;font-weight:bold">(<em>TMLR</em>&nbsp;🥳&nbsp;2025)</span>
             <li>Lause et al., <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1012403">The art of seeing the elephant in the room: 2D embeddings of single-cell data do make sense</a>&nbsp;<a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1012403&type=printable"><img src="pdf_16x16.png" alt="" width=16 height=16></a> <span style="color:red;font-weight:bold">(<em>PLoS Comp Bio</em>&nbsp;🥳&nbsp;2024)</span>&nbsp;<a href="https://twitter.com/JanLause/status/1775854327308951683"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
             <li>Damrich et al., <a href="https://www.biorxiv.org/content/10.1101/2024.04.26.590867">Visualizing single-cell data with the neighbor embedding spectrum</a>&nbsp;<a href="https://www.biorxiv.org/content/10.1101/2024.04.26.590867v1.full.pdf"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>bioRxiv</em>,&nbsp;2024)
             <li>González-Márquez et al., <a href="https://openreview.net/forum?id=2OObXL3AaZ">Learning representations of learning representations</a>&nbsp;<a href="https://openreview.net/pdf?id=2OObXL3AaZ"><img src="pdf_16x16.png" alt="" width=16 height=16></a> (<em>DMLR&nbsp;workshop&nbsp;@&nbsp;ICLR</em>,&nbsp;2024)&nbsp;<a href="https://twitter.com/hippopedoid/status/1787447987037167806"><img src="twitter_16x16.png" alt="" width=16 height=16 style="margin-bottom:-.2em"></a>
@@ -236,7 +236,7 @@ Political Analysis 2</pre></div>
  8 | ..
  9 | .</pre></div></div>
         
-        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: August 21, 2025
+        <p style="margin-top:3em; font-size:80%; text-align:right; font-style:italic">Last updated: December 12, 2025
         
         <div><img src="kobaks1.jpg" width=100% alt="kobaks" style="display:block; margin:1em 0"></div> 
     </body>
