--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
         <h2>Supervision / team</h2>
         Postdocs:
         <ul>
-            <li><a href="https://scholar.google.com/citations?user=-ClpooYAAAAJ">Sebastian Damrich</a> (started in 2023)
+            <li><a href="https://scholar.google.com/citations?user=-ClpooYAAAAJ">Sebastian Damrich</a> (2023–2025) → junior group leader at Hertie AI
         </ul>        
         PhD students:
         <ul>
             <li><a href="https://scholar.google.com/citations?user=RAfipNgAAAAJ">Rita González Márquez</a> (started in 2022)
-            <li><a href="https://scholar.google.com/citations?user=CWHChI8AAAAJ">Niklas Böhm</a> (started in 2021)
+            <li><a href="https://scholar.google.com/citations?user=CWHChI8AAAAJ">Niklas Böhm</a> (2021–2025) → postdoc in European Space Agency
         </ul>
         MSc students:
         <ul>
             <li>Moritz Christ (2025)
             <li><a href="https://scholar.google.com/citations?user=cn2rZJ8AAAAJ">Marius Keute</a> (2023)
-            <li><a href="https://scholar.google.com/citations?user=Wa4htm8AAAAJ">Fynn Bachmann</a> (2021) → PhD student at the university of Zürich
+            <li><a href="https://scholar.google.com/citations?user=Wa4htm8AAAAJ">Fynn Bachmann</a> (2021) → PhD student at the University of Zürich
             <li><a href="https://scholar.google.com/citations?user=RAfipNgAAAAJ">Rita González Márquez</a> (2021) → PhD student
             <li><a href="https://scholar.google.com/citations?user=CWHChI8AAAAJ">Niklas Böhm</a> (2020) → PhD student
         </ul>
