--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@ Political Analysis 2</pre></div>
  8 | ...
  9 | .</pre></div></div>
         
-        <div style="margin-top:50px;">
-<pre>Area chair: ICLR 2026, ICML 2026.
+        <div style="margin-top:1em;">
+<pre>Area chair: ICLR 2026, ICML 2026
 Action editor: TMLR (from 2025)</pre>
         </div>        
         
